bpo-42195: Ensure consistency of Callable's __args__ in collections.abc and typing (GH-23060)